# Rustflakes

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/binaries/: db.rs  network.rs
